2006-10-21 11:45-EDT Matt Rice <ratmice@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: Implement documentRect.
	Since the editor is the table's superview, it will take its size from
	the editor.  Corrects bug#18073
	Patch committed by Gregory John Casamento <greg_casamento@yahoo.com>
	
2006-10-20 20:08-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile
	* GormLib/GNUmakefile
	* GormLib/Version
	* GormObjCHeaderParser/GNUmakefile
	* GormObjCHeaderParser/Version
	* GormPrefs/GNUmakefile: Modify GNUmakefiles to use Version
	to properly name .so libraries.

2006-10-19 23:11-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m: Retain File's Owner setting, if
	class is being updated.
	Correction for bug #18035 

2006-10-19 22:56-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.[hm]: Added actionExists:onClassNamed: and
	outletExists:onClassNamed: methods to query the existence of a
	given action/outlet on a given class.
	* GormCore/GormDocument.[hm]: Added refreshConnectionsForClassNamed:
	method.
	* Images/GormFile.tiff: Added "gorm" in the center to make it obvious
	which type this is for.
	* Images/GormNib.tiff: Added "nib" in the center to make it obvious
	which type this is for.
	Correction for bug #18035 

2006-10-18 14:03-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/FileIcon_gmodel.tiff
	* Images/GormNib.tiff
	* Images/GormPalette.tiff: Redid icons.

2006-10-15 19:32-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/GormFile.tiff: New Gorm file icon, based on new Gorm icon.
	* Images/GormTesting.tiff: New testing icon.
	* Images/Gorm.tiff: Switch to icon by Jesse Ross.

2006-10-10 22:46-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Install into SYSTEM domain by default.

2006-10-10 21:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBInspector.m: Remove uneeded call to 